# varlociraptor-viz

./: .gitignore  README.md  event_probabilities.vl.json  pixi.toml  pyproject.toml  setup.py  tumor_biopsy.py  visualize_bcf.py  visualize_vcf.py
examples/: calls.bcf  example.vcf
src/varlociraptor_viz/: __init__.py  visualizations.py  visualizations.py.backup  visualizations.py.backup.20251218_171632
src/varlociraptor_viz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_visualizations.py
